workloads/minecraft/kustomize/i-1b163d47/nginx/svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: nginx-i-36f8a5b8-svc

spec:
  type: ClusterIP

  selector:
    app: nginx-i-36f8a5b8-pod

  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: nginx-http
